test/tasty/neg/src-2/TestHello_fail.scala
package helloworld

object TestHello {
  val helloworld = HelloWorld.msg
  HelloWorld.acceptsOnlyMsg1(helloworld)
}
